--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -117,4 +117,6 @@
     </div>
   </div>
 </main>
+{{ $script := resources.Get "js/main.js" | resources.Minify | resources.Fingerprint }}
+<script src="{{ $script.RelPermalink }}"></script>
 {{ end }}
