--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -21,11 +21,17 @@
       <h1 class="max-w-4xl text-3xl font-bold text-white md:text-5xl">
         {{ .Title }}
       </h1>
-      <div class="mt-6 flex flex-wrap items-center justify-center gap-4 text-sm text-white/80">
+      <div class="mt-6 flex flex-wrap items-center justify-center gap-4 text-sm text-white/60">
         {{ if .Date }}
         <div class="flex items-center">
           <i class="fa-solid fa-calendar mr-2"></i>
-          {{ .Date.Format "January 2, 2006" }}
+          Published on {{ .Date.Format "January 2, 2006" }}
+        </div>
+        {{ end }}
+        {{ if ne .Date .Lastmod }}
+        <div class="flex items-center mx-3">
+          <i class="fa-solid fa-pen-to-square mr-2"></i>
+          Updated on {{ .Lastmod.Format "January 2, 2006" }}
         </div>
         {{ end }}
         <div class="flex items-center">
@@ -98,7 +104,7 @@
         {{ end }}
       </div>
     </div>
-    <div class="mx-auto max-w-3xl">
+    <div class="mx-auto max-w-3xl mt-3">
       <script src="https://giscus.app/client.js"
         data-repo="yxlow07/yxlow07.github.io"
         data-repo-id="R_kgDOOn_g4g"
