--- a/assets/css/out.css
+++ b/assets/css/out.css
@@ -1449,6 +1449,22 @@ i {
     padding-block: calc(var(--spacing) * 0.5);
     color: var(--color-gray-800);
   }
+  table {
+    margin-bottom: calc(var(--spacing) * 4);
+    border-collapse: collapse;
+    border-style: var(--tw-border-style);
+    border-width: 1px;
+    border-color: var(--color-slate-900);
+    padding: calc(var(--spacing) * 3);
+  }
+  td, th {
+    border-style: var(--tw-border-style);
+    border-width: 1px;
+    border-color: var(--color-slate-900);
+    padding: calc(var(--spacing) * 3);
+    --tw-font-weight: var(--font-weight-medium);
+    font-weight: var(--font-weight-medium);
+  }
 }
 a.highlightedLinks {
   color: var(--color-blue-600);
