guide-shark added, shortcodes for embeds and raw html

--- a/assets/css/out.css
+++ b/assets/css/out.css
@@ -565,6 +565,9 @@
   .flex-shrink-0 {
     flex-shrink: 0;
   }
+  .flex-grow {
+    flex-grow: 1;
+  }
   .border-collapse {
     border-collapse: collapse;
   }
