Blog Updates and CSS Centering Embeds

--- a/layouts/shortcodes/embed.html
+++ b/layouts/shortcodes/embed.html
@@ -1,3 +1,5 @@
 {{ $file := .Get "src" }}
+<div class="flex items-center justify-center w-full">
 {{ $embedContent := readFile (printf "static/embeds/%s" $file) }}
 {{ $embedContent | safeHTML }}
+</div>
