--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -14,9 +14,11 @@
     <link rel="icon" href="/{{ .Site.Params.favicon }}" type="image/png">
     {{ partial "css.html" . }}
 </head>
-<body class="min-h-screen bg-slate-50 text-slate-900 antialiased">
+<body class="flex min-h-screen flex-col bg-slate-50 text-slate-900 antialiased">
     {{ partial "header.html" . }}
-    {{ block "main" . }}{{ end }}
+    <main class="flex-1">
+        {{ block "main" . }}{{ end }}
+    </main>
     {{ partial "footer.html" . }}
     {{ if .Params.math }} 
         {{ partialCached "math.html" . }}
