updated kuih link

--- a/layouts/kuih-classifier/list.html
+++ b/layouts/kuih-classifier/list.html
@@ -70,7 +70,7 @@
   const errorContainer = document.getElementById("error-container");
   const errorText = document.getElementById("error-text");
 
-  const apiUrl = "http://localhost:8001/predict/";
+  const apiUrl = "https://b18955a9f761.ngrok-free.app/predict/";
   let cameraStream = null;
   let isFrozen = false;
 
