--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -23,7 +23,7 @@
       <div class="mt-8 flex flex-wrap justify-center gap-4">
         <!--   Download resume     -->
         <a href="{{ $.Site.Data.hero.cvLink }}" class="group relative inline-flex animate-fade-in-up items-center overflow-hidden rounded-md bg-blue-600 px-5 py-2.5 text-sm font-medium text-white transition-transform hover:scale-105">
-          <span class="relative z-10">Download CV</span>
+          <span class="relative z-10">View CV</span>
           <div class="absolute inset-0 -z-0 bg-gradient-to-r from-blue-600 to-indigo-600 opacity-0 transition-opacity group-hover:opacity-100"></div>
           <i class="fa-duotone fa-solid fa-download ml-2 mt-1"></i>
         </a>
