--- a/layouts/partials/blogs.html
+++ b/layouts/partials/blogs.html
@@ -40,7 +40,7 @@
                       <span>Updated {{ .Params.lastMod.Format "Jan 2, 2006" }}</span>
               </div>
               <a href="{{ .RelPermalink }}">
-                <h3 class="mt-4 text-xl font-semibold leading-tight text-slate-900 group-hover:text-blue-600">
+                <h3 class="mt-4 text-xl font-bold leading-tight text-slate-900 group-hover:text-blue-600">
                   {{ .Title }}
                 </h3>
               </a>
