--- a/layouts/partials/projects.html
+++ b/layouts/partials/projects.html
@@ -23,7 +23,7 @@
           <div class="absolute inset-0 bg-gradient-to-b from-transparent to-black/50 opacity-0 transition-opacity duration-300 group-hover:opacity-100"></div>
         </div>
         <div class="relative p-6">
-          <h3 class="text-xl font-semibold transition-colors group-hover:text-blue-600">
+          <h3 class="text-xl font-bold transition-colors group-hover:text-blue-600">
             {{ .title }}
           </h3>
           <p class="mt-2 text-slate-600">{{ .description }}</p>
